# demos

./: .gitignore  .nojekyll  404.qmd  CNAME  CODEOWNERS  README.md  _quarto.yml  astro.config.ts  build.sh  index.html  index.qmd  package-lock.json  package.json  paros.qmd  playwright.config.js  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  renovate.json  robots.txt  search.json  sitemap.xml  styles.css  visisipy.qmd  wrangler.jsonc
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy.yml  playwright.yml
_assets/wheels/: numba-0.61.2-py3-none-any.whl  vtk-9.4.2-py3-none-any.whl
_includes/: mdr-modal.html  mdr.js  resize-iframe.html  resize-iframe.js
_scripts/: generate-edit-url.py
demos/paros/: app.py  requirements.txt
demos/visisipy/: app.py  requirements.txt
mock_libraries/: build_wheels.py
paros/: index.html  index.qmd
scripts/: generate-edit-url.py  generate-shinylive-assets.mjs  generate-shinylive-assets.ts  shinylive-pyodide-overrides.json
src/: content.config.ts
src/components/: ActionButton.astro  Callout.astro  IframeResizeScript.astro  MdrModal.astro
src/demos/: paros.mdx  visisipy.mdx
src/layouts/: DemoPageLayout.astro  MainLayout.astro
src/pages/: 404.astro  [demo].astro  index.astro
src/styles/: global.css
synteyes/: demo_create_retina.ipynb  demo_synteyes_create_n.ipynb  index.qmd  modeldata.json  modeldata.py  support_functions.py
tests/: demos.spec.ts  visisipy.spec.js  visisipy.spec.ts
visisipy/: index.html  index.qmd
visisipy/mock_libraries/: build_wheels.py
(+5 files in other folders)
