[project]
name = "mreye-demos"
version = "0.1.0"
description = "Website with interactive demos for the MReye research group"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lzstring>=1.0.4",
    "python-frontmatter>=1.1.0",
    "quarto-cli>=1.8.25",
    "shinylive>=0.8.3",
    "visisipy>=0.1.0",
]
