[project]
name = "mreye-demos"
version = "0.1.0"
description = "Website with interactive demos for the MReye research group"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "shinylive>=0.8.3",
    "visisipy==0.4.0",
    "optiland==0.6.0",
    "paros >= 1.0.1",
    "sympy",
    "numpy",
    "scipy",
    "pandas",
    "pyyaml",
    "matplotlib",
    "tabulate",
    "requests",
    "seaborn",
    "shiny>=1.6.0",
    "faicons>=0.2.2",
    "jinja2>=3.1.6",
]

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "COM",
    "C4",
    "E",
    "F",
    "FA",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "NPY",
    "PERF",
    "PIE",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "TC",
    "TID",
    "TRY",
    "UP",
    "W",
]
ignore = ["COM812", "TRY003"]

exclude = ["mock_libraries/**/*.py"]